kubernetes/apps/logging/kibana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: logging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: internal
  rules:
    - host: kibana.wakkalabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: logging-kb-http
                port:
                  number: 5601
  tls:
    - hosts:
        - kibana.wakkalabs.com
      secretName: kibana-tls
